<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:orientation="vertical">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10pt"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tr"/>

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="50px"
            android:text="@string/from"
            />
        <android.support.v7.widget.AppCompatSpinner

            android:id="@+id/inputLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            android:
        </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>
    <FrameLayout
        android:layout_width="50pt"
        android:layout_height="17pt"
        android:layout_gravity="center">
        <Button
            android:id="@+id/refresh"
            android:onClick="refresh"
            android:text="gfg"
            android:layout_width="50pt"
            android:layout_height="17pt" />
    </FrameLayout>

    <LinearLayout
        android:paddingTop="10px"
        android:paddingBottom="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="32px"
            android:text="@string/to"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/outputLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>


    <EditText

        android:inputType="textMultiLine"
        android:id="@+id/inputText"
        android:lines="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inText">
    </EditText>
    <Button
        android:id="@+id/tr"
        android:onClick="onclick"
        android:text="@string/Start"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/outputText"
        android:lines="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oText">>
    </EditText>
    <LinearLayout
        android:paddingTop="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:text="@string/End"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web">
        </TextView>
        <TextView
            android:text="@string/UrlAdrSer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web">
        </TextView>
        <TextView
            android:text="@string/Author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web">
        </TextView>
    </LinearLayout>

</LinearLayout>
